--- a/iOSSteamGuardExtractor/MainWindow.axaml
+++ b/iOSSteamGuardExtractor/MainWindow.axaml
@@ -2,18 +2,21 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="700" d:DesignHeight="500"
-        Width="700" Height="500"
+        mc:Ignorable="d" d:DesignWidth="540" d:DesignHeight="540"
+        Width="540" Height="540"
         WindowStartupLocation="CenterScreen"
         x:Class="iOSSteamGuardExtractor.MainWindow"
+        Icon="/Assets/ApplicationIcon.ico"
         Title="iOS Backup SteamGuard Authenticator Data Extractor">
   <DockPanel>
-    <Button Name="btnGetSteamGuardData" 
+    <Button Name="btnGetSteamGuardData"
             DockPanel.Dock="Bottom"
+            Height="38"
             Content="Get Steamguard Authenticator Data" />
-    <TextBox Name="txtResults" 
+    <TextBox Name="txtResults"
              TextWrapping="Wrap"
              AcceptsReturn="True"
+             IsReadOnly="True"
              DockPanel.Dock="Top" />
   </DockPanel>
 </Window>
